Novos ajustes em 30-12-2025 17:30h